--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
   build:
     name: Build y Test
     runs-on: ubuntu-latest
+    strategy:
+       matrix:
+         java-version: ['11', '17', '21']
 
     steps:
     # Paso 1: Descargar el código del repositorio
@@ -21,12 +24,12 @@ jobs:
       uses: actions/checkout@v4
     
     # Paso 2: Configurar Java JDK 17
-    - name: ☕ Configurar JDK 17
+    - name: ☕ Configurar JDK ${{ matrix.java-version }}
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+         java-version: ${{ matrix.java-version }}
+         distribution: 'temurin'
+         cache: maven
     
     # Paso 3: Compilar el proyecto
     - name: 🔨 Compilar con Maven
